client/src/components/CustomDataDisplay/styles.css
.custom-data {
  grid-area: custom;
  width: 50%;
  height: 50%;
}

.data-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
}

.data-container {
  display: flex;
}

.one-third {
  flex: 2;
}

.two-thirds {
  flex: 3;
}

.data-table {
  margin: 1px;
}

.data-text {
  color: #f9f7f7; 
  font-size: 20px; 
}

